Edits to the footer

--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -539,7 +539,7 @@ $(document).ready(function() {
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li><a href="mailto:support@gamegeek.com" class="mail">
+							<li><a href="mailto:GameGeekWebsite@gmail.com" class="mail">
 								<i class="fas fa-envelope"></i>&#160;&#160;GameGeekWebsite@gmail.com
 							</a></li>
 							<li>
