--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -360,7 +360,7 @@ console.log("Document is ready.");
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li><a href="mailto:support@gamegeek.com" class="mail">
+							<li><a href="mailto:sGameGeekWebsite@gmail.com" class="mail">
 								<i class="fas fa-envelope"></i>&#160;&#160;GameGeekWebsite@gmail.com
 							</a></li>
 							<li>
