--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -70,10 +70,9 @@
 
 }
 
-/* Your styles for the content inside each profile container */
 .input-container, .input-container-read {
-    width: 100%; /* Make the content take up the full width */
-    text-align: left; /* Adjust text alignment as needed */
+    width: 100%; 
+    text-align: left;
 }
 
 .input-container input, .input-container-read input {
