--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -238,9 +238,9 @@ body img{
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
 						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
-
 						<script>
 							$(document).ready(function() {
+								// Fetch user data and display welcome message
 								$.ajax({
 									url: '/BackEnd/Hello/',
 									type: 'GET',
@@ -256,8 +256,68 @@ body img{
 										console.error('Error:', error);
 									}
 								});
+						
+								// Function to generate HTML for a single game
+								function generateGameHtml(game) {
+									return `
+										<div class="col-lg-4 col-md-6 text-center strawberry">
+											<div class="single-product-item">
+												<button class="remove-game" data-id="${game.id}"><i class="glyphicon glyphicon-remove" aria-hidden="true"></i></button>
+												<div class="product-image">
+													<a href="${game.url}" class="urls"><img src="${game.icon_url}" alt="" class="imgs"></a>
+												</div>
+												<h3 class="names">${game.name}</h3>
+												<a href="${game.url}" class="cart-btn ids" style="text-decoration: none;">More info</a>
+											</div>
+										</div>`;
+								}
+						
+								// AJAX request to get favorite games
+								$.ajax({
+									url: '/BackEnd/favorite_games/',
+									type: 'GET',
+									dataType: 'json',
+									success: function(data) {
+										if ('games' in data) {
+											var gamesHtml = '';
+											$.each(data.games, function(index, game) {
+												gamesHtml += generateGameHtml(game);
+											});
+											$('#favoriteGamesContainer').html(gamesHtml);
+										} else {
+											console.error('Error getting favorite games:', data.error);
+										}
+									},
+									error: function(error) {
+										console.error('Error getting favorite games:', error);
+									}
+								});
 							});
-							</script>					</div>
+						
+							// Handle remove game button click
+							$(document).on('click', '.remove-game', function() {
+								var button = $(this);
+								var gameId = button.data('id');
+						
+								// AJAX request to remove the game
+								$.ajax({
+									url: `/BackEnd/remove_favorite/${gameId}/`,
+									type: 'GET',
+									dataType: 'json',
+									success: function(data) {
+										console.log('Game removed successfully:', data);
+										
+										// Update the UI as needed (e.g., remove the game from the DOM)
+										button.closest('.single-product-item').remove();
+									},
+									error: function(error) {
+										console.error('Error removing game:', error);
+									}
+								});
+							});
+						</script>
+						
+					</div>
 				</div>
 			</div>
 		</div>
@@ -298,28 +358,10 @@ body img{
                 </div>
             </div>
 
-			<div class="row product-lists">
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<button class="remove-game" data-id="1"><i class="glyphicon glyphicon-remove" aria-hidden="true"></i></button>
-						<div class="product-image">
-							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
-						</div>
-						<h3 class="names"></h3>
-						<a href="" class="cart-btn ids" style="text-decoration: none;" onclick="info(event)">More info</a>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center berry">
-					<div class="single-product-item">
-						<button class="remove-game" data-id="2"><i class="glyphicon glyphicon-remove" aria-hidden="true"></i></button>
-						<div class="product-image">
-							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
-						</div>
-						<h3 class="names">Lorem ipsum</h3>
-						<a href="" class="cart-btn ids" style="text-decoration: none;" onclick="info(event)">More info</a>
-					</div>
-				</div>
+			<div class="row product-lists" id="favoriteGamesContainer">
+				<!-- Games will be dynamically added here -->
 			</div>
+			
 						
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -399,32 +441,7 @@ body img{
 		</div>
 	</div>
 	<!-- end copyright -->
-
-    <script>
-        // Get all the remove game buttons.
-        const removeGameButtons = document.querySelectorAll('.remove-game');
-    
-        removeGameButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                // Get the data-id attribute of the button.
-                const buttonId = button.getAttribute('data-id');
-                // Calculate the shift amount (e.g., 380px).
-                const shiftAmount = 380;
-    
-                // Delete the single-product-item div.
-                button.parentElement.remove();
-    
-                // Check if the buttonId is '1', then move the next item 380px to the left.
-                if (buttonId === '1') {
-                    const remainingProductItem = document.querySelector('.single-product-item');
-                    if (remainingProductItem) {
-                        const itemLeft = parseInt(remainingProductItem.style.left, 10) || 0;
-                        remainingProductItem.style.left = (itemLeft - shiftAmount) + 'px';
-                    }
-                }
-            });
-        });
-    </script>
+	
 	
 	<!-- jquery -->
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
@@ -447,95 +464,6 @@ body img{
 	<!-- main js -->
 	<script src="{% static '/js/main.js' %}"></script>
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-$(document).ready(function () {
-console.log("Document is ready.");
-    // Function to fetch and display random high-rated games
-    function fetchRandomGames() {
-        var url = '/BackEnd/retrieve_random_high_rated_games/';
-
-        $.ajax({
-            url: url,
-            method: 'GET',
-            dataType: 'json',
-            success: function (data) {
-                console.log('Received data:', data);
-
-                if (data && data.random_high_rated_games_data) {
-                    displayGames(data.random_high_rated_games_data);
-                } else {
-                    console.error('Data format is not as expected:', data);
-                }
-            },
-            error: function (xhr, textStatus, errorThrown) {
-            console.log("error")
-
-            }
-        });
-    }
-
-    // Function to dynamically update the HTML with game data
-   function displayGames(games) {
-        console.log(games);
-           var imageElements = document.querySelectorAll('.imgs');
-        var nameElements = document.querySelectorAll('.names');
-        var idElements = document.querySelectorAll('.ids');
-        var urlElements = document.querySelectorAll('.urls');
-
-
-       for (var j = 0, i = 9; i < 11 && i < games.length; i++, j++) {
-         var game = games[i];
-
-        // Select elements by class
-        var imageElement = imageElements[j];
-       var nameElement = nameElements[j];
-       var idElement =idElements[j];
-       urlElement=urlElements[j];
-       console.log(urlElement)
-
-
-       idElement=idElements[j];
-       idElement.setAttribute('data-game-id', game.ID);
-
-        console.log(idElement.getAttribute('data-game-id'));
-
-    imageElement.src=game.Icon_URL;
-    nameElement.innerHTML=game.Name;
-    urlElement.href=game.URL;
-
-
-
-
-
-}
-    }
-
-    // Fetch random games when the page loads
-    fetchRandomGames();
-    console.log("fetchRandomGames function called.");
-});
-</script>
-<script>
-    function info(event) {
-        event.preventDefault(); // Prevent the default link behavior
-
-        // Get the clicked element
-        var clickedElement = event.target;
-
-        // Example: Get the value of the "data-game-id" attribute
-        var gameNewID = clickedElement.getAttribute('data-game-id');
-
-        // Use the attribute value as needed
-        console.log('Clicked Game ID:', gameNewID);
-
-        // Modify the URL
-        var newURL = `/game_info_page/${gameNewID}/`;
-        console.log('New URL:', newURL);
-
-        // Replace the current URL with the new one and trigger a reload
-        window.location.replace(newURL);
-    }
-</script>
 
 </body>
 {% endblock %}
