--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -529,7 +529,7 @@ document.addEventListener('DOMContentLoaded', function () {
         }
 
         document.querySelector('.Lang').innerHTML = '<strong>Languages:</strong> ' + gameData.Languages;
-        document.querySelector('.rDate').innerHTML = '<strong>Release Date:</strong> ' + gameData.Original_Release_Date;
+        document.querySelector('.rDate').innerHTML = '<strong>Release Date:</strong> ' + gameData.Original_Release_Date+'.';
         document.querySelector('.Developer').innerHTML = '<strong>Developer:</strong> ' + gameData.Developer;
         document.querySelector('.age').innerHTML = '<strong>Age Rating:</strong> ' + gameData.Age_Rating+'.';
         document.querySelector('.price').innerHTML = '<strong>Price:</strong> ' + gameData.Price+'.';
