--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -65,8 +65,7 @@
         background-clip: text;
         -webkit-background-clip: text;
 }
-		.container {
-		height:100%;}
+
 	.site-logo img{
   width: 200px;
     height: 100px;
@@ -170,8 +169,51 @@ body img{
 										console.error('Error:', error);
 									}
 								});
+								$('#VisitedGamesContainer').removeAttr('style');
+								// Function to generate HTML for a single game
+								function generateGameHtml(game) {
+									return `
+									<div class="col-lg-4 col-md-6 text-center game-item" data-game-id="${game.id}">
+											<div class="single-product-item">
+												<div class="product-image">
+													<a href="${game.url}" class="urls"><img src="${game.icon_url}" alt="" class="imgs"></a>
+												</div>
+												<h3 class="names">${game.name}</h3>
+												<h6 >Viaited Date: ${game.visited_date}</h6>
+												<a href="#" class="cart-btn more-info-btn">More info</a>
+												
+											</div>
+										</div>`;
+										
+								}
+								$('#VisitedGamesContainer').on('click', '.more-info-btn', function(e) {
+									e.preventDefault();
+									selectedGameId = $(this).closest('.game-item').data('game-id');
+									window.location.href = `/game_info_page/${selectedGameId}/`;
+								});
+								
+								$.ajax({
+									url: '/BackEnd/visited_games/',
+									type: 'GET',
+									dataType: 'json',
+									success: function(data) {
+										if ('games' in data) {
+											var gamesHtml = '';
+											$.each(data.games, function(index, game) {
+												gamesHtml += generateGameHtml(game);
+											});
+											$('#VisitedGamesContainer').html(gamesHtml);
+										} else {
+											console.error('Error getting visited games:', data.error);
+										}
+									},
+									error: function(error) {
+										console.error('Error getting visited games:', error);
+									}
+								});
 							});
-							</script>					</div>
+							</script>					
+					</div>
 				</div>
 			</div>
 		</div>
@@ -201,7 +243,7 @@ body img{
 					<li class="breadcrumb-item current"><a href="{% url 'History' %}">Downloaded Games</a></li>
 				</ul>
 	<!-- games -->
-	<div class="product-section mt-150 mb-150" style="height:70%">
+	<div class="product-section mt-150 mb-150">
 		<div class="container">
 
 			<div class="row">
@@ -210,71 +252,24 @@ body img{
                 </div>
             </div>
 
-			<div class="row product-lists" style="height:auto;">
-				<div class="col-lg-4 col-md-6 text-center strawberry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
-						</div>
-						<h3 class="names"></h3>
-						
-						<a href="" class="cart-btn ids" onclick="info(event)" >More info</a>
-						<br>
-						<div style="display: flex; align-items: center;">
-							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 10/12/2023</h6>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center berry">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
-						</div>
-						<h3 class ='names'></h3>
-						
-						<a href="" class="cart-btn ids" onclick="info(event)">More info</a>
-						<br>
-						<div style="display: flex; align-items: center;">
-							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 text-center lemon">
-					<div class="single-product-item">
-						<div class="product-image">
-							<a href="" class="urls"><img src="" alt="" class="imgs"></a>
-						</div>
-						<h3 class='names'></h3>
-						
-						<a href="" class="cart-btn ids" onclick="info(event)">More info</a>
-						<br>
-						<div style="display: flex; align-items: center;">
-							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
-						</div>
-				</div>
-				</div>
+			<div class="row product-lists" id="VisitedGamesContainer">
+				<!-- Games will be dynamically added here -->
 			</div>
-
-
-
+			
+						
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
 						<ul>
 
 						</ul>
-
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- end games -->
-
-	<!-- logo carousel -->
 	
-	<!-- end logo carousel -->
-
 	<!-- footer -->
 	<div class="footer-area">
 		<div class="container">
@@ -363,96 +358,6 @@ body img{
 	<!-- main js -->
 	<script src="{% static '/js/main.js' %}"></script>
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-$(document).ready(function () {
-console.log("Document is ready.");
-    // Function to fetch and display random high-rated games
-    function fetchRandomGames() {
-        var url = '/BackEnd/retrieve_random_high_rated_games/';
-
-        $.ajax({
-            url: url,
-            method: 'GET',
-            dataType: 'json',
-            success: function (data) {
-                console.log('Received data:', data);
-
-                if (data && data.random_high_rated_games_data) {
-                    displayGames(data.random_high_rated_games_data);
-                } else {
-                    console.error('Data format is not as expected:', data);
-                }
-            },
-            error: function (xhr, textStatus, errorThrown) {
-            console.log("error")
-
-            }
-        });
-    }
-
-    // Function to dynamically update the HTML with game data
-   function displayGames(games) {
-        console.log(games);
-           var imageElements = document.querySelectorAll('.imgs');
-        var nameElements = document.querySelectorAll('.names');
-        var idElements = document.querySelectorAll('.ids');
-        var urlElements = document.querySelectorAll('.urls');
-
-
-       for (var j = 0, i = 6; i < 9 && i < games.length; i++, j++) {
-         var game = games[i];
-
-        // Select elements by class
-        var imageElement = imageElements[j];
-       var nameElement = nameElements[j];
-       var idElement =idElements[j];
-       urlElement=urlElements[j]
-;
-
-
-       idElement=idElements[j];
-       idElement.setAttribute('data-game-id', game.ID);
-
-        console.log(idElement.getAttribute('data-game-id'));
-
-    imageElement.src=game.Icon_URL;
-    nameElement.innerHTML=game.Name;
-    urlElement.href=game.URL;
-
-
-
-
-
-}
-    }
-
-    // Fetch random games when the page loads
-    fetchRandomGames();
-    console.log("fetchRandomGames function called.");
-});
-</script>
-<script>
-    function info(event) {
-        event.preventDefault(); // Prevent the default link behavior
-
-        // Get the clicked element
-        var clickedElement = event.target;
-
-        // Example: Get the value of the "data-game-id" attribute
-        var gameNewID = clickedElement.getAttribute('data-game-id');
-
-        // Use the attribute value as needed
-        console.log('Clicked Game ID:', gameNewID);
-
-        // Modify the URL
-        var newURL = `/game_info_page/${gameNewID}/`;
-        console.log('New URL:', newURL);
-
-        // Replace the current URL with the new one and trigger a reload
-        window.location.replace(newURL);
-    }
-</script>
-
 </body>
 {% endblock %}
 </html>
